--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-*.venv, *.vscode, __pycache__, my_venv/
+*.venv, *.vscode, __pycache__, my_venv/, D:\BD-1\Prediction of Placement Status Data\BDAI\my_venv
